--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.3
   equatable: ^2.0.5
   flutter_svg: ^2.0.10+1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,6 +66,26 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+
+# Launcher icon configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/task_App_icon.png
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: assets/task_App_icon.png
+    favicon_path: assets/task_App_icon.png
+  windows:
+    generate: true
+    image_path: assets/task_App_icon.png
+  macos:
+    generate: true
+    image_path: assets/task_App_icon.png
+  linux:
+    generate: true
+    image_path: assets/task_App_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
